--- a/pom.xml
+++ b/pom.xml
@@ -81,29 +81,16 @@
     </build>
 
 	<distributionManagement>
-<!--         <repository> -->
-<!--             <id>september</id> -->
-<!--             <name>Nexus Release Repository</name> -->
-<!--             <url>http://120.92.166.27:9081/nexus/content/repositories/release/</url> -->
-<!--         </repository> -->
-<!--         <snapshotRepository> -->
-<!--             <id>september</id> -->
-<!--             <name>Nexus Snapshot Repository</name> -->
-<!--             <url>http://120.92.166.27:9081/nexus/content/repositories/snapshots/</url> -->
-<!--         </snapshotRepository> -->
-        
-         <repository>
-            <id>releases</id>
-            <name>meipingmi release distribution respository</name>
-            <url>http://118.31.164.61:8081/nexus/content/repositories/releases/</url>
+        <repository>
+            <id>september</id>
+            <name>Nexus Release Repository</name>
+            <url>http://120.92.166.27:9081/nexus/content/repositories/release/</url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
-            <name>meipingmi snapshots distribution respository</name>
-            <url>http://118.31.164.61:8081/nexus/content/repositories/snapshots/</url>
-            <uniqueVersion>true</uniqueVersion>
+            <id>september</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://120.92.166.27:9081/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
-        
     </distributionManagement>
 
 </project>
