实体类支持枚举类型，支持继承

--- a/alliance-smartdao/pom.xml
+++ b/alliance-smartdao/pom.xml
@@ -5,6 +5,7 @@
 
 	<artifactId>alliance-smartdao</artifactId>
 	<packaging>jar</packaging>
+	<version>2.2.0-SNAPSHOT</version>
 
 	<name>smart-dao</name>
 	<description>A simple and smart mybatis and spring boot based dao </description>
