优化，重构，增加常用枚举

--- a/alliance-smartdao/src/main/resources/test.properties
+++ b/alliance-smartdao/src/main/resources/test.properties
@@ -1,16 +1,10 @@
-#mybatis.config-locations=classpath:mybatis/mybatis-config.xml
-#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-#spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/smart-dao-test?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
-spring.datasource.username = root
-spring.datasource.password = 1qaz2wsx
-
-spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
-
-spring.datasource.tomcat.minIdle=10
-spring.datasource.tomcat.maxActive=30
-
+spring.alliance.dao.datasource[0].group = smartdao
+spring.alliance.dao.datasource[0].type = read/write
+spring.alliance.dao.datasource[0].driverClass=com.mysql.cj.jdbc.Driver
+spring.alliance.dao.datasource[0].jdbcUrl = jdbc:mysql://106.12.26.82:3306/easyconf?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+spring.alliance.dao.datasource[0].username = root
+spring.alliance.dao.datasource[0].password = 1qaz2wsx
 #
 logging.level.dao=debug
 
