--- a/alliance-core/pom.xml
+++ b/alliance-core/pom.xml
@@ -11,8 +11,8 @@
 
 	<parent>
 		<groupId>org.september</groupId>
-		<artifactId>alliance-parent</artifactId>
-		<version>2.1.1-SNAPSHOT</version>
+		<artifactId>alliance-base</artifactId>
+		<version>2.2.0-SNAPSHOT</version>
 	</parent>
 	<properties>
 	</properties>
