--- a/alliance-simpleweb/pom.xml
+++ b/alliance-simpleweb/pom.xml
@@ -9,8 +9,8 @@
 
 	<parent>
 		<groupId>org.september</groupId>
-		<artifactId>alliance-parent</artifactId>
-		<version>2.1.1-SNAPSHOT</version>
+		<artifactId>alliance-base</artifactId>
+		<version>2.2.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>org.september</groupId>
 			<artifactId>alliance-core</artifactId>
-			<version>2.1.1-SNAPSHOT</version>
+			<version>2.2.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
