--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.september</groupId>
 	<artifactId>alliance-base</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.2.0.1</version>
 	<packaging>pom</packaging>
 	<description>Alliance base library parent pom</description>
 
