--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.september</groupId>
 	<artifactId>alliance-base</artifactId>
-	<version>2.2.0.1</version>
+	<version>2.2.0.2</version>
 	<packaging>pom</packaging>
 	<description>Alliance base library parent pom</description>
 
@@ -80,16 +80,30 @@
         </plugins>
     </build>
 
-	<distributionManagement>
+<!-- 	<distributionManagement> -->
+<!--         <repository> -->
+<!--             <id>september</id> -->
+<!--             <name>Nexus Release Repository</name> -->
+<!--             <url>http://120.92.166.27:9081/nexus/content/repositories/releases/</url> -->
+<!--         </repository> -->
+<!--         <snapshotRepository> -->
+<!--             <id>september</id> -->
+<!--             <name>Nexus Snapshot Repository</name> -->
+<!--             <url>http://120.92.166.27:9081/nexus/content/repositories/snapshots/</url> -->
+<!--         </snapshotRepository> -->
+<!--     </distributionManagement> -->
+    
+    <distributionManagement>
         <repository>
-            <id>september</id>
-            <name>Nexus Release Repository</name>
-            <url>http://120.92.166.27:9081/nexus/content/repositories/releases/</url>
+            <id>releases</id>
+            <name>meipingmi release distribution respository</name>
+            <url>http://118.31.164.61:8081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>september</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>http://120.92.166.27:9081/nexus/content/repositories/snapshots/</url>
+            <id>snapshots</id>
+            <name>meipingmi snapshots distribution respository</name>
+            <url>http://118.31.164.61:8081/nexus/content/repositories/snapshots/</url>
+            <uniqueVersion>true</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
 
