--- a/alliance-core/pom.xml
+++ b/alliance-core/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.september</groupId>
 		<artifactId>alliance-base</artifactId>
-		<version>2.2.0.2</version>
+		<version>2.3.0</version>
 	</parent>
 	<properties>
 	</properties>
@@ -30,6 +30,11 @@
 		    <version>2.6</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.september</groupId>
+			<artifactId>alliance-pojo</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
