--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.september</groupId>
 	<artifactId>alliance-base</artifactId>
-	<version>2.2.0.2</version>
+	<version>2.3.0</version>
 	<packaging>pom</packaging>
 	<description>Alliance base library parent pom</description>
 
@@ -23,6 +23,7 @@
 	</properties>
 
 	<modules>
+		<module>alliance-pojo</module>
 		<module>alliance-core</module>
 		<module>alliance-smartdao</module>
 		<module>alliance-simpleweb</module>
@@ -80,30 +81,16 @@
         </plugins>
     </build>
 
-<!-- 	<distributionManagement> -->
-<!--         <repository> -->
-<!--             <id>september</id> -->
-<!--             <name>Nexus Release Repository</name> -->
-<!--             <url>http://120.92.166.27:9081/nexus/content/repositories/releases/</url> -->
-<!--         </repository> -->
-<!--         <snapshotRepository> -->
-<!--             <id>september</id> -->
-<!--             <name>Nexus Snapshot Repository</name> -->
-<!--             <url>http://120.92.166.27:9081/nexus/content/repositories/snapshots/</url> -->
-<!--         </snapshotRepository> -->
-<!--     </distributionManagement> -->
-    
-    <distributionManagement>
+	<distributionManagement>
         <repository>
-            <id>releases</id>
-            <name>meipingmi release distribution respository</name>
-            <url>http://118.31.164.61:8081/nexus/content/repositories/releases/</url>
+            <id>september</id>
+            <name>Nexus Release Repository</name>
+            <url>http://120.92.166.27:9081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
-            <name>meipingmi snapshots distribution respository</name>
-            <url>http://118.31.164.61:8081/nexus/content/repositories/snapshots/</url>
-            <uniqueVersion>true</uniqueVersion>
+            <id>september</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://120.92.166.27:9081/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
