--- a/alliance-core/pom.xml
+++ b/alliance-core/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.september</groupId>
 		<artifactId>alliance-base</artifactId>
-		<version>2.3.0</version>
+		<version>2.3.1-SNAPSHOT</version>
 	</parent>
 	<properties>
 	</properties>
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>org.september</groupId>
 			<artifactId>alliance-pojo</artifactId>
-			<version>2.3.0</version>
+			<version>2.3.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
