--- a/alliance-pojo/pom.xml
+++ b/alliance-pojo/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.september</groupId>
 		<artifactId>alliance-base</artifactId>
-		<version>2.3.1-SNAPSHOT</version>
+		<version>springboot-1.5.12-SNAPSHOT</version>
 	</parent>
 	<properties>
 	</properties>
