--- a/alliance-smartdao/pom.xml
+++ b/alliance-smartdao/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.september</groupId>
 		<artifactId>alliance-base</artifactId>
-		<version>2.3.1-SNAPSHOT</version>
+		<version>springboot-1.5.12-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -81,7 +81,7 @@
 		<dependency>
 			<groupId>org.september</groupId>
 			<artifactId>alliance-core</artifactId>
-			<version>2.3.1-SNAPSHOT</version>
+			<version>springboot-1.5.12-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
