--- a/alliance-simpleweb/pom.xml
+++ b/alliance-simpleweb/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.september</groupId>
 		<artifactId>alliance-base</artifactId>
-		<version>2.3.1-SNAPSHOT</version>
+		<version>2.3.2-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -43,7 +43,12 @@
 		<dependency>
 			<groupId>org.september</groupId>
 			<artifactId>alliance-core</artifactId>
-			<version>2.3.1-SNAPSHOT</version>
+			<version>2.3.2-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
 		</dependency>
 	</dependencies>
 
