--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
 	<groupId>org.september</groupId>
 	<artifactId>alliance-base</artifactId>
-	<version>2.3.1-SNAPSHOT</version>
+	<version>2.3.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<description>Alliance base library parent pom</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.0.RELEASE</version>
+		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -94,4 +94,26 @@
         </snapshotRepository>
     </distributionManagement>
 
+	<repositories>
+		<repository>
+			<id>september</id>
+			<name>Spring Snapshots</name>
+			<url>http://120.92.166.27:9081/nexus/content/groups/public/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+
+		<repository>
+	        <releases>
+	            <enabled>true</enabled>
+	        </releases>
+	        <snapshots>
+	            <enabled>false</enabled>
+	        </snapshots>
+	        <id>ias-releases</id>
+	        <name>Infinite Automation Release Repository</name>
+	        <url>https://maven.mangoautomation.net/repository/ias-release/</url>
+	    </repository>
+	</repositories>
 </project>
