--- a/alliance-simpleweb/pom.xml
+++ b/alliance-simpleweb/pom.xml
@@ -35,6 +35,11 @@
 		</dependency>
 
 		<dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-validation</artifactId>
+	    </dependency>
+	    
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -46,10 +51,6 @@
 			<version>2.3.2-SNAPSHOT</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>javax.validation</groupId>
-		    <artifactId>validation-api</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
