--- a/alliance-core/pom.xml
+++ b/alliance-core/pom.xml
@@ -34,6 +34,25 @@
 			<groupId>org.september</groupId>
 			<artifactId>alliance-pojo</artifactId>
 			<version>2.3.2-SNAPSHOT</version>
+		</dependency>		
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.5.0-b01</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcprov-jdk15on</artifactId>
+		    <version>1.64</version>
 		</dependency>
 	</dependencies>
 
