增加sqlserver适配，优化多数据源

--- a/alliance-smartdao/src/main/resources/test.properties
+++ b/alliance-smartdao/src/main/resources/test.properties
@@ -1,10 +1,10 @@
 
 spring.alliance.dao.datasource[0].group = smartdao
 spring.alliance.dao.datasource[0].type = read/write
-spring.alliance.dao.datasource[0].driverClass=com.mysql.cj.jdbc.Driver
-spring.alliance.dao.datasource[0].jdbcUrl = jdbc:mysql://106.12.26.82:3306/easyconf?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
-spring.alliance.dao.datasource[0].username = root
-spring.alliance.dao.datasource[0].password = 1qaz2wsx
+spring.alliance.dao.datasource[0].driverClass=net.sourceforge.jtds.jdbc.Driver
+spring.alliance.dao.datasource[0].jdbcUrl = jdbc:jtds:sqlserver://192.168.20.16:1433;datebaseName=test
+spring.alliance.dao.datasource[0].username = sa
+spring.alliance.dao.datasource[0].password = 123456
 #
 logging.level.dao=debug
 
