--- a/alliance-core/pom.xml
+++ b/alliance-core/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.september</groupId>
 		<artifactId>alliance-base</artifactId>
-		<version>2.3.3-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 	<properties>
 	</properties>
@@ -33,12 +33,17 @@
 		<dependency>
 			<groupId>org.september</groupId>
 			<artifactId>alliance-pojo</artifactId>
-			<version>2.3.3-SNAPSHOT</version>
-		</dependency>		
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.5.0-b01</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -55,7 +60,6 @@
 		    <version>1.64</version>
 		</dependency>
 	</dependencies>
-
 	<build>
     </build>
 </project>
